[project]
name = "paralyze"
version = "0.1.0"
description = "Primitives and helpers for managing concurrent and parallel processes"
authors = [{ name = "Nick Joyce", email = "nick@stratuscode.com" }]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "configur8>=2.0, <2.1",
    "google-cloud-monitoring",
    "structlog",
    "sqlalchemy",
    "orjson>=3.8.9",
]

[tool.pdm.dev-dependencies]
dev = [
    "autopep8",
    "black",
    "coverage",
    "flake8",
    "mypy",
    "pymssql>=2.2.7",
    "pytest-cov",
    "pytest-mock",
    "pytest-mypy-plugins",
    "pytest-mypy",
    "pytest-watch",
    "pytest",
    "python-dotenv[cli]",
    "turbodbc>=4.6.0",
    "types-colorama",
    "types-mysqlclient",
    "types-protobuf",
    "types-pymssql>=2.1.0",
    "types-pymysql>=1.1.0.0",
    "types-pyyaml>=6.0.12.8",
    "types-requests",
    "vulture",
]

[tool.pdm.build]
includes = ["src"]
package-dir = "src"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
