[project]
name = "paralyze"
version = "0.1.0"
description = "Primitives and helpers for managing concurrent and parallel processes"
authors = [{ name = "Nick Joyce", email = "nick@stratuscode.com" }]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "configur8>=2.0, <2.1",
    "google-cloud-monitoring",
    "msgspec",
    "sqlalchemy",
    "structlog",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff]
line-length = 80

[tool.pdm.dev-dependencies]
dev = [
    "coverage",
    "mypy",
    "pymssql",
    "pytest-cov",
    "pytest-mock",
    "pytest-mypy-plugins",
    "pytest-mypy",
    "pytest-watch",
    "pytest",
    "python-dotenv[cli]",
    "ruff",
    "turbodbc",
    # included because mypy complains about:
    # `structlog/dev.py:39: error: Library stubs not installed for "colorama"  [import-untyped]`
    # even though it's not a direct dependency
    "types-colorama",
    "types-mysqlclient",
    "types-protobuf",
    "types-pymssql",
    "types-pymysql",
    "types-pyyaml",
    "types-requests",
]

[tool.pdm.build]
includes = ["src"]
package-dir = "src"
